# pyBacktrack

./: .gitignore  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
Docker/: Dockerfile
conda/: meta.yaml
docs/: conf.py  index.rst  pybacktrack_backstrip.rst  pybacktrack_backtrack.rst  pybacktrack_getting_started.rst  pybacktrack_overview.rst  pybacktrack_paleo_bathymetry.rst  pybacktrack_reference.rst  pybacktrack_stratigraphy.rst  requirements.txt
pybacktrack/: __init__.py  age_to_depth.py  age_to_depth_cli.py  backstrip.py  backstrip_cli.py  backtrack.py  backtrack_cli.py  bundle_data.py  dynamic_topography.py  dynamic_topography_cli.py  install_examples.py  install_supplementary.py  lithology.py  paleo_bathymetry.py  paleo_bathymetry_cli.py  rifting.py  sea_level.py  stratigraphic_depth_to_age.py  stratigraphic_depth_to_age_cli.py  version.py  well.py
pybacktrack/bundle_data/reconstruction/Z22/: Readme.txt  rift_end_grid.nc  rift_start_grid.nc  subducting_boundaries.gpmlz  trenches.gpmlz
pybacktrack/bundle_data/sea_level/: Readme.txt
pybacktrack/notebooks/: backstrip.ipynb  backtrack.ipynb  decompacting_stratigraphy.ipynb  paleobathymetry.ipynb
pybacktrack/supplementary/: EarthByte_global_COBs_2024.gpmlz  Readme.txt  convert_GA_well.py  convert_old_wells.py  convert_sediment_to_water_thickness.py  convert_to_netcdf4.py  generate_present_day_trenches.py  generate_rift_grids.py  merge_paleo_bathymetry_grids.py  ocean_age_range_to_depths.py  reconstruct_drill_sites.py  reconstruct_paleo_bathymetry.py  test_multipoint_came_from_static_polygons.py  transfer_trench_exclusion_distances.py
pybacktrack/supplementary/deforming_model/Z22/: Readme.txt  rotation_files.txt  topology_files.txt
pybacktrack/util/: call_system_command.py  interpolate.py  interpolate_cli.py
tests/: README.md  test_age_to_depth.py  test_backstrip.py  test_backtrack.py  test_interpolate.py  test_stratigraphic_depth_to_age.py
tests/test_data/: DSDP-36-327_backtrack_decompacted.txt  ODP-114-699_backtrack_decompacted.txt  sunrise_backstrip_decompacted.txt
