[build-system]
requires = [
    "setuptools>=61.0.0",  # setuptools 61.0 fully embraces 'pyproject.toml' configuration
    "setuptools-scm"  # when installed it automatically includes all git-tracked files into our source distribution
]
build-backend = "setuptools.build_meta"

[project]
name = "pybacktrack"
dynamic = ["version"]
description = "A tool for reconstructing paleobathymetry on oceanic and continental crust."
readme = "README.rst"
authors = [{ name = "John Cannon", email = "john.cannon@sydney.edu.au" }]
license-files = ["LICENSE"]
requires-python = ">=3.8"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
keywords = ["bathymetry", "backtrack", "backstrip", "rift", "subsidence", "tectonic"]
dependencies = ["numpy", "scipy", "pygplates", "setuptools"]
urls.Homepage = "https://github.com/EarthByte/pyBacktrack"
urls.Documentation = "http://pybacktrack.readthedocs.io"
optional-dependencies.dev = ["pytest"]

[tool.setuptools]
# Help setuptools to look only at the 'pybacktrack' package (so doesn't think other top-level dirs are packages).
packages.find.include = ["pybacktrack*"]
# Ensure embedded *data* folders are found (they look like namespace packages, ie, no '__init__.py' in folder).
packages.find.namespaces = true
# Include package data in the *wheel*.
#
# "setuptools-scm" and 'MANIFEST.in' determine what data files go in the *sdist*.
# And "include-package-data=true" also includes them in the *wheel*,
# but only those *inside* the package directory tree ('pybacktrack*') by default.
#
# Note: "setuptools-scm" restricts to git-tracked files.
#       'MANIFEST.in' excludes some git-tracked files included by "setuptools-scm".
include-package-data = true
# Load the 'pybacktrack.version' module and get its '__version__' attribute.
dynamic.version = {attr = "pybacktrack.version.__version__"}
